--- a/docs/retype.yml
+++ b/docs/retype.yml
@@ -58,7 +58,7 @@ links:
 
   - text: Whitepaper
     link: https://verdict.haizelabs.com/whitepaper.pdf
-    icon: <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17.536 24" width="17.536" height="24"><path d="m6.493 9.265 2.241 2.708 6.6-7.753c.349-.465.514-.709.349-1.105a1.21 1.21 0 0 0-1.049-.74.95.95 0 0 0-.704.259Z" fill="#bdb9b4"/><path d="M12.403 10.559 1.914.497a1.4 1.4 0 0 0-.825-.494A1.08 1.08 0 0 0 .073.656c-.165.396-.046.673.315 1.193l8.346 10.129-6.212 7.63a1.33 1.33 0 0 0-.319 1.286 1.1 1.1 0 0 0 1.028.682 1 1 0 0 0 .74-.361l8.425-7.833a1.903 1.903 0 0 0 .006-2.823" fill="#b31b1b"/><path d="M17.144 22.117 8.713 11.956l-2.24-2.707-1.374 1.24a2.04 2.04 0 0 0 0 2.932l10.693 10.304a.92.92 0 0 0 .734.279 1.03 1.03 0 0 0 .942-.66 1.25 1.25 0 0 0-.324-1.227" fill="#bdb9b4"/></svg>
+    icon: book
     target: blank
 
 locale: en
