replaces resource with psutil

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ dependencies = [
     "eval-type-backport",
     "typing_extensions",
     "loguru",
-    "krippendorff"
+    "krippendorff",
+    "psutil",
 ]
 
 [project.optional-dependencies]
